# study_github_actions

./: .coverage  README.md  pyproject.toml
.github/workflows/: coverage.yml  main.yml
tests/: test_prime.py
