[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = ""
authors = ["r_shibata <ryosuke9913@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
